<resources>
    <string name="app_name">MTG EDH</string>
    <string name="_3_players">3 PLAYERS</string>
    <string name="_2_players">2 PLAYERS</string>
    <string name="_4_players">4 PLAYERS</string>
    <string name="_5_players">5 PLAYERS</string>
    <string name="settings">SETTINGS</string>
    <string name="button">Button</string>
    <string name="menu">Menu</string>
    <string name="_40">40</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="edh_assistant">EDH ASSISTANT</string>
    <string name="cmd_dmg">CMD DMG</string>
    <string name="cmd_tax">CMD TAX</string>
    <string name="color_identity">COLOR IDENTITY</string>
    <string name="monarch">MONARCH</string>
    <string name="r">r</string>
    <string name="ascend">ASCEND</string>
    <string name="simic">SIMIC</string>
    <string name="red">RED</string>
    <string name="grixis">GRIXIS</string>
    <string name="naya">NAYA</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="black">BLACK</string>
    <string name="white">WHITE</string>
    <string name="save">SAVE</string>
    <string name="cmdr_2">CMDR 2</string>
    <string name="cmdr_1">CMDR 1</string>
    <string name="exit">EXIT</string>
    <string name="comingsoon">comingSoon</string>
    <string name="m">M</string>
    <string name="color">COLOR</string>
    <string name="logo">logo</string>
    <string name="monocolor">MONOCOLOR</string>
    <string name="_2_color">2 COLOR</string>
    <string name="_3_color">3 COLOR</string>
    <string name="_4_color_5_color_and_colorless">4 COLOR, 5 COLOR and COLORLESS</string>
    <string name="_4_color">4 COLOR</string>
    <string name="_5_color">5 COLOR</string>
    <string name="colorless">COLORLESS</string>
    <string name="colors">COLORS</string>
    <string name="color_picked">COLOR PICKED :</string>
    <string name="c">C</string>
    <string name="crown">♛</string>
    <string name="blessing">⛯</string>
    <string name="number_of_players">Number of players :</string>
    <string name="start">START</string>
    <string name="_2">2</string>
    <string name="guide">GUIDE</string>
    <string name="controls">CONTROLS</string>
    <string name="buttonColor">With this button you can pick your commander\'s color identity</string>
</resources>