<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:screenOrientation="portrait"
    android:textAlignment="center">


    <LinearLayout
        android:id="@+id/LayoutBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C8C5C5"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/commander_img2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal"/>

        <LinearLayout
            android:id="@+id/commander_img1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal">

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/cmdrColor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:saveEnabled="true"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/buttonRemove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRemove" />

    <TextView
        android:id="@+id/cmdrColor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:saveEnabled="true"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/buttonRemove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRemove" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:background="@drawable/menu"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_city"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:background="#4C4949"
        android:onClick="blessing"
        android:text="@string/blessing"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonComTaxAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonAdd"
        app:layout_constraintTop_toTopOf="@+id/textViewComTax" />

    <Button
        android:id="@+id/button_city2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="#4C4949"
        android:onClick="blessing2"
        android:rotation="180"
        android:text="@string/blessing"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewComTax2"
        app:layout_constraintEnd_toStartOf="@+id/buttonComTaxAdd2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonComTaxAdd2" />

    <Button
        android:id="@+id/button_monarch"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="#4C4949"
        android:onClick="monarch"
        android:text="@string/crown"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonComTaxRemove"
        app:layout_constraintEnd_toEndOf="@+id/buttonRemove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewComTax" />

    <Button
        android:id="@+id/button_monarch2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:background="#4C4949"
        android:onClick="monarch2"
        android:rotation="180"
        android:text="@string/crown"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewComTax2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonComTaxRemove2"
        app:layout_constraintTop_toTopOf="@+id/buttonComTaxRemove2" />

    <Button
        android:id="@+id/button_commander_color"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#4C4949"
        android:text="@string/c"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewHp"
        app:layout_constraintEnd_toEndOf="@+id/buttonReturn"
        app:layout_constraintStart_toStartOf="@+id/buttonReturn"
        app:layout_constraintTop_toBottomOf="@+id/buttonReturn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_commander_color2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="#4C4949"
        android:rotation="180"
        android:text="@string/c"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonReturn"
        app:layout_constraintEnd_toEndOf="@+id/buttonReturn"
        app:layout_constraintStart_toStartOf="@+id/buttonReturn"
        app:layout_constraintTop_toBottomOf="@+id/textViewHp2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewHp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/_40"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="100sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReturn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewHp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:rotation="180"
        android:text="@string/_40"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonRemove2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="17dp"
        android:background="#4C4949"
        android:onClick="removeHp2"
        android:rotation="180"
        android:text="@string/minus"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonResetCom1"
        app:layout_constraintTop_toTopOf="@+id/textViewHp2" />

    <Button
        android:id="@+id/buttonRemove"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginEnd="17dp"
        android:background="#4C4949"
        android:onClick="removeHp"
        android:text="@string/minus"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHp"
        app:layout_constraintEnd_toStartOf="@+id/buttonResetCom2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewHp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="17dp"
        android:background="#4C4949"
        android:longClickable="false"
        android:onClick="addHp"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonResetCom1"
        app:layout_constraintTop_toTopOf="@+id/textViewHp" />

    <Button
        android:id="@+id/buttonAdd2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginEnd="17dp"
        android:background="#4C4949"
        android:onClick="addHp2"
        android:rotation="180"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHp2"
        app:layout_constraintEnd_toStartOf="@+id/buttonResetCom2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewHp2" />

    <TextView
        android:id="@+id/textViewComTax"
        android:layout_width="126dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/cmd_tax"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonAdd"
        app:layout_constraintStart_toStartOf="@+id/buttonRemove"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

    <TextView
        android:id="@+id/textViewComTax2"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:rotation="180"
        android:text="@string/cmd_tax"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd2"
        app:layout_constraintEnd_toEndOf="@+id/buttonRemove2"
        app:layout_constraintStart_toStartOf="@+id/buttonAdd2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonComTaxAdd"
        android:layout_width="43dp"
        android:layout_height="33dp"
        android:background="#4C4949"
        android:onClick="addComTax"
        android:text="@string/plus"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewComTax"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewComTax"
        app:layout_constraintTop_toBottomOf="@+id/textViewComTax"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonComTaxAdd2"
        android:layout_width="43dp"
        android:layout_height="33dp"
        android:background="#4C4949"
        android:onClick="addComTax2"
        android:text="@string/plus"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textViewComTax2"
        app:layout_constraintEnd_toEndOf="@+id/buttonComTaxRemove2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewComTax2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonComTaxRemove"
        android:layout_width="43dp"
        android:layout_height="33dp"
        android:background="#4C4949"
        android:onClick="removeComTax"
        android:text="@string/minus"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewComTax"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewComTax"
        app:layout_constraintTop_toBottomOf="@+id/textViewComTax"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonComTaxRemove2"
        android:layout_width="43dp"
        android:layout_height="33dp"
        android:background="#4C4949"
        android:onClick="removeComTax2"
        android:rotation="180"
        android:text="@string/minus"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textViewComTax2"
        app:layout_constraintEnd_toEndOf="@+id/textViewComTax2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewComTax2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewComTaxCount2"
        android:layout_width="27dp"
        android:layout_height="31dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:rotation="180"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewComTax2"
        app:layout_constraintEnd_toStartOf="@+id/buttonComTaxRemove2"
        app:layout_constraintStart_toEndOf="@+id/buttonComTaxAdd2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewComTaxCount"
        android:layout_width="27dp"
        android:layout_height="31dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonComTaxAdd"
        app:layout_constraintStart_toEndOf="@+id/buttonComTaxRemove"
        app:layout_constraintTop_toBottomOf="@+id/textViewComTax"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonResetCom1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:background="#4C4949"
        android:onClick="resetCom1"
        android:text="@string/r"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonReturn"
        app:layout_constraintTop_toTopOf="@+id/buttonReturn" />

    <Button
        android:id="@+id/buttonResetCom2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="#4C4949"
        android:onClick="resetCom2"
        android:rotation="180"
        android:text="@string/r"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonResetCom1"
        app:layout_constraintEnd_toStartOf="@+id/buttonReturn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonResetCom1" />


</androidx.constraintlayout.widget.ConstraintLayout>